Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanBoolObj.quorum
class Main
    action Main
        Boolean b
        boolean bool
        b:SetValue(true)
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end