Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjBooleanWrapped.quorum
class main
    action Main
        Boolean b = true
    end
end